--- a/template/package.json
+++ b/template/package.json
@@ -7,15 +7,13 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "node build/build.js"{{#lint}},
-    "lint": "eslint --ext .js,.vue src"{{/lint}}
+    "build": "node build/build.js"
   },
   "dependencies": {
     "flyio": "^0.6.2",
     "mpvue-wxparse": "^0.6.5",
-    "mpvue": "^1.0.11"{{#vant}},
-    "vant-weapp": "^0.4.0"{{/vant}}{{#vuex}},
-    "vuex": "^3.0.1"{{/vuex}}
+    "mpvue": "^1.0.11",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -35,9 +33,6 @@
     "less-loader": "^4.1.0",
     "sass-resources-loader": "^2.0.0",
     "px2rpx-loader": "^0.1.0",
-    {{#lint}}
-    "babel-eslint": "^8.2.0",
-    {{/lint}}
     "babel-loader": "^7.1.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.7.0",
@@ -47,23 +42,6 @@
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
-    {{#lint}}
-    "eslint": "^4.19.0",
-    "eslint-friendly-formatter": "^4.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-node": "^6.0.0",
-    "eslint-plugin-html": "^4.0.0",
-    {{#if_eq lintConfig "standard"}}
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.0",
-    {{/if_eq}}
-    {{#if_eq lintConfig "airbnb"}}
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-import-resolver-webpack": "^0.9.0",
-    {{/if_eq}}
-    {{/lint}}
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
