--- a/template/package.json
+++ b/template/package.json
@@ -10,9 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@gaomd/mpvue-animated-number": "^0.1.3",
     "flyio": "^0.6.2",
     "mpvue-wxparse": "^0.6.5",
     "mpvue": "^1.0.11",
+    "mpvue-picker": "^2.0.5",
+    "mpvue-toast": "^0.1.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
